--- a/HOME.css
+++ b/HOME.css
@@ -8,23 +8,44 @@
     margin-left: 0%;
     margin-right: 0%;
     margin-bottom: 30px;
-}
-#home{
-    color:#fff;
-    text-decoration-line: none;
+    color: #fff;
 }
 .nav-menu{
     margin-bottom: 20px;
 }
-#man, #woman, #kid{
+a{
     text-decoration-line: none;
     color: #746363;
     font-weight: lighter;
     font-size: 20px;
     margin-left: 40px;
 }
-
-.main{
-    background-color: red;
-
+a:hover{
+    color: #000fff;
 }
+
+.contents1{
+    display: flex;
+    justify-content: center;
+}
+#m1,#m2,#m3,#m4{
+    width: 300px;
+    height: 300px;
+    margin-left: 10px;
+    margin-top: -25px;
+}
+.content1,.content2,.content3,.content4{
+    width: 330px;
+    height: 310px;
+    background-color: #ededed;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    margin: 40px 20px;
+} 
+#m1:hover{
+    width: 310px;
+    height: 310px;
+    margin-left: 10px;
+    margin-top: -80px;
+} 
