--- a/HOME.css
+++ b/HOME.css
@@ -49,3 +49,22 @@ a:hover{
     margin-left: 10px;
     margin-top: -80px;
 } 
+.contents2{
+    display: flex;
+    justify-content: center;
+}
+#m5,#m6,#m7,#m8{
+    width: 300px;
+    height: 300px;
+    margin-left: 10px;
+    margin-top: -25px;
+}
+.content5,.content6,.content7,.content8{
+    width: 330px;
+    height: 310px;
+    background-color: #ededed;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    margin: 40px 20px;
+} 
